fix: resolve SonarQube code smells — constants, unused vars, merged ifs
- Add string constants for duplicate literals (Sonar S1192):
  AuditAdminController, CulqiProvider, MercadoPagoProvider, StripeProvider,
  JdbcGeoPostgresGatewayAdapter, ServicioServiceImpl, CotizacionServiceImpl,
  ReporteServiceImpl, PagoServiceImpl, HorarioTecnicoServiceImpl,
  TecnicoServiceImpl, MongoIndexMigrationRunner, ServicioFinalizadoException,
  UbicacionInvalidaException
- Merge nested if statements (Sonar S1066): EspecialidadServiceImpl
- Remove unused import BigDecimal (Sonar S1128): CalificacionRegistradaEvent
- Remove unused local variable (Sonar S1481): EvidenciaServiceImpl
- Replace RuntimeException with IllegalStateException (Sonar S112): PagoServiceImpl
- Replace Stream.collect(Collectors.toList()) with Stream.toList() (Sonar java16)